added dropdown for artist + jQuery file

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,10 +7,17 @@
         <div class="card">
           <div class="card-block">
             <h4 class="card-title">Your Artist</h4>
-            <div id='search-bar'>
+            <div class='search-bar'>
               <form action='nothing'>
-                <input type='text' name='search' id='searchfld' placeholder="Pick your artist." autofocus/>
+                <input type='text' name='search' class='searchfld' placeholder="Pick your artist." autofocus/>
               </form>
+              <div class='artist-list'>
+                <form action='nothing'>
+                  <li>Artist 1</li>
+                  <li>Artist 2</li>
+                  <li>Artist 3</li>
+                </form>
+              </div>
             </div>
           </div>
         </div>
@@ -19,10 +26,17 @@
         <div class="card">
           <div class="card-block">
             <h4 class="card-title">Their Artist</h4>
-            <div id='search-bar'>
+            <div class='search-bar'>
               <form action='nothing'>
-                <input type='text' name='search' id='searchfld' placeholder="Pick your artist." autofocus/>
+                <input type='text' name='search' class='searchfld' placeholder="Pick your artist." autofocus/>
               </form>
+              <div class='artist-list'>
+                <form action='nothing'>
+                  <li>Artist 1</li>
+                  <li>Artist 2</li>
+                  <li>Artist 3</li>
+                </form>
+              </div>
             </div>
           </div>
         </div>
