--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,7 +46,7 @@ body {
 .container {
   width: 600px;
   margin: 40px auto;
-  background: @default;
+  background: #3c405c;
   padding: 20px;
   border: 5px solid #343850;
   .box-shadow(0 0 24px rgba(0,0,0,0.12));
@@ -54,13 +54,13 @@ body {
   h1, h2 { padding: 0; margin: 0; .font-smooth; text-align: center; }
   .block {
     padding: 10px;
-    border: 2px solid @default-light;
+    border: 2px solid #474c6c;
     margin-top: 6px;
     em {
       text-align: right;
       display: block;
       font-style: normal;
-      color: @silver-darker;
+      color: #2a2d3e;
       margin-top: -4px;
       margin-bottom: 4px;
       font-size: 12px;
@@ -106,13 +106,13 @@ body {
 #navigation-bar span {display:block;}
 
 /* search bar */
-#search-bar {
+.search-bar {
   width:100%;
   border-radius:4px;
   text-align: center;
 }
 form {width:90%;}
-input#searchfld {
+input.searchfld {
   width:100%;
   padding:10px 5%;
   margin:0;
@@ -142,23 +142,4 @@ input#searchfld {
     label { width: @label-width; margin: 0; }
     input { width: 100 - @label-width; margin: 0; }
   }
-}
-
-/* mixins */
-.transition(@duration:0.25s, @ease:ease-in-out) {
-  -webkit-transition: all @duration @ease;
-  -moz-transition: all @duration @ease;
-  -o-transition: all @duration @ease;
-  transition: all @duration @ease;
-}
-.font-smooth(@fontsmooth: antialiased, @mozfontsmooth: grayscale ) {
-  -webkit-font-smoothing: @fontsmooth;
-  -moz-osx-font-smoothing: @mozfontsmooth;
-  font-smoothing: @fontsmooth;
-  text-rendering: optimizeLegibility;
-}
-.box-shadow(@arguments) {
-  -webkit-box-shadow: @arguments;
-  -moz-box-shadow: @arguments;
-  box-shadow: @arguments;
 }
