--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,8 +2,12 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <!-- add road trip logo that virginia will create-->
+    <link rel="icon" href="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+  	<script src="/js/jquery.js"></script>
+    <script src="/js/main.js"></script>
   </head>
   <body>
     <!--NAV BAR-->
