--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,7 +18,7 @@
           <li class='menu-sub-nav current-item'><a href='#'><i class='fa fa-home'></i><span>Home</span></a></li>
           <li class='menu-sub-nav'><a href='#'><i class='fa fa-globe'></i><span>Discover</span></a></li>
           <li class='menu-sub-nav'><a href='#'><i class='fa fa-user'></i><span>Me</span></a></li>
-          <li class='menu-sub-nav'><a href='#'><i class='fa fa-users'></i><span>Contacts</span></a></li>
+          <li class='menu-sub-nav'><a href='#'><i class='fa fa-users'></i><span>Friends</span></a></li>
           <li class='menu-sub-nav' id='searchbox'><a href='#'><i class='fa fa-book'></i><span>My Playlists</span></a></li>
         </ul>
       </div>
