working on facebook

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
+    <title>Road Trip</title>
     <!-- add road trip logo that virginia will create-->
     <link rel="icon" href="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -15,11 +15,12 @@
     <div id='menu-nav'>
       <div id='navigation-bar'>
         <ul>
-          <li class='menu-sub-nav current-item'><a href='#'><i class='fa fa-home'></i><span>Home</span></a></li>
-          <li class='menu-sub-nav'><a href='#'><i class='fa fa-globe'></i><span>Discover</span></a></li>
-          <li class='menu-sub-nav'><a href='#'><i class='fa fa-user'></i><span>Me</span></a></li>
-          <li class='menu-sub-nav'><a href='#'><i class='fa fa-users'></i><span>Friends</span></a></li>
-          <li class='menu-sub-nav' id='searchbox'><a href='#'><i class='fa fa-book'></i><span>My Playlists</span></a></li>
+          <li class='menu-sub-nav current-item'><a href='/'><i class='fa fa-home'></i><span>Home</span></a></li>
+          <li class='menu-sub-nav'><a href='/discover'><i class='fa fa-globe'></i><span>Discover</span></a></li>
+          <li class='menu-sub-nav'><a href='/myAccount'><i class='fa fa-user'></i><span>Me</span></a></li>
+          <li class='menu-sub-nav'><a href='/friends'><i class='fa fa-users'></i><span>Friends</span></a></li>
+          <li class='menu-sub-nav' id='searchbox'><a href='/myPlaylists'><i class='fa fa-book'></i><span>My Playlists</span></a></li>
+          <li class='menu-sub-nav'><a href='/logout'><i class='fa'></i><span>Logout</span></a></li>
         </ul>
       </div>
       <!-- <div id='search-bar'>
