--- a/views/register.hbs
+++ b/views/register.hbs
@@ -11,6 +11,9 @@
       <input type="text" name="username" class="form-control" placeholder="Username">
   </div>
   <div class="form-group">
+      <input type="text" name="email" class="form-control" placeholder="Email">
+  </div>
+  <div class="form-group">
     <input type="password" name="password" class="form-control" placeholder="Password">
   </div>
   <div class="form-group">
