--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,6 +35,18 @@ body {
   text-align: center;
 }
 
+.shittyLogo {
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#bodyContainer {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 .heading{
   font: 20px 'Open Sans', sans-serif;
   color: #d3d7e3;
