readded jQuery and added animate.css

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   	<script src="/js/jquery.js"></script>
     <script src="/js/main.js"></script>
-    <!-- <script src="/stylesheets/animate.css"></script> -->
+    <link rel="stylesheet" href="/stylesheets/animate.min.css">
   </head>
   <body>
     <!--NAV BAR-->
