--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <img class="shittyLogo" src="/images/roadtriplogo.png" style="width: 20vw; min-width: 250px"/>
 <div class="container" id="bodyContainer">
-  <div class="heading">Create the perfect playlist for a roadtrip with friends</div>
+  <div class="heading">Create the perfect playlist for a roadtrip with friends.</div>
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-6">
