--- a/views/login.hbs
+++ b/views/login.hbs
@@ -8,7 +8,7 @@
 
 <img class="shittyLogo" src="/images/roadtriplogo.png" style="width: 20vw; min-width: 250px"/>
 <div class="container" id="bodyContainer">
-  <div class="heading">Create the perfect playlist for a roadtrip with friends</div>
+  <div class="heading">Create the perfect playlist for a roadtrip with friends.</div>
   <div class="container-fluid">
     <div class="row">
       <form method="POST" class="form-horizontal">
