--- a/views/getSpotify.hbs
+++ b/views/getSpotify.hbs
@@ -1,5 +1,5 @@
 <h1>Connect your Spotify account</h1>
-<form method="POST" class="form-horizontal">
+<form method="POST" class="form-horizontal" style="margin-left:150px;">
   <div class="form-group">
       <a type="button" name="login" class="btn btn-success" href="/login/spotify">Log in to Spotify</a>
   </div>
