--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,7 @@
   <head>
     <title>Road Trip</title>
     <link rel="icon" href="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   	<script src="/js/jquery.js"></script>
@@ -11,6 +12,20 @@
   </head>
   <body>
     <!--NAV BAR-->
+<div class="header">
+    <div id='navigation-bar'>
+    <ul class=>
+        <li><a href="/">Home</a>
+        <a href="/discover">Discover</a>
+        <a href="/myAccount">Me</a>
+        <a href="/friends">Friends</a>
+        <a href="/myPlaylists">Playlists</a>
+        <a href="/logout">Logout</a></li>
+    </ul>
+    <a href="#" id="pull">Menu</a>
+    </div>
+</div>
+
     <div class="header">
     <div id='menu-nav'>
       <div id='navigation-bar'>
@@ -30,6 +45,8 @@
       </div> -->
     </div>
   </div>
+
+</body>
 
     {{{body}}}
   </body>
