fixed NAV BAR TO BE MOBILE AND COOL

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -85,6 +85,7 @@ body {
 }
 
 #menu-nav {
+  display: none;
   float:left;
   width:100%; height:auto;
   background-color:#ecf0f1;
@@ -93,7 +94,40 @@ body {
 }
 
 /* navigation bar */
-#navigation-bar {width:100%;}
+#navigation-bar {
+  width:100%;
+}
+.show-nav #menu-nav {
+  display:block;
+}
+.show-nav #pull {
+  display: none;
+}
+
+#pull{
+  color:#848484; font-size:20px; text-decoration:none; text-align:center;
+  width:100%;
+  padding:20px 0;
+  display:block; position:relative;
+  transition: all 0.3s ease;
+}
+
+a#pull:hover{
+  color:#55acee;
+  transition: all 0.3s ease;
+}
+a#pull:before{
+  content:'';
+  transition:all .4s ease-in-out;
+  position:absolute; right:50%; left:50%; bottom:0;
+  display:block;
+  height:2px;
+  background-color:#55acee;
+}
+a#pull:hover:before{
+  right:0;
+  left:0;
+}
 #navigation-bar ul {margin:0; padding:0; list-style:none; width:100%; border-radius:4px; overflow:hidden; max-width: 1200px;
 margin: 0 auto; /*make the menu center-aligned*/}
 #navigation-bar li {float:left; padding:0; margin:0; list-style:none; width:16%;}
@@ -157,41 +191,45 @@ input.searchfld {
   }
 }
 
+#navigation-bar-mobile{
+  display: none;
+}
 
 /*MEDIA QUERY*/
 @media only screen and (max-width : 480px) {
-    .navigation-bar {
-        border-bottom: 0;
-    }
-    .navigation-bar ul {
-        display: none;
-        height: auto;
-    }
-    .navigation-bar a#pull {
-        display: block;
-        background-color: #283744;
-        width: 100%;
-        position: relative;
-    }
-    .navigation-bar a#pull:after {
-        content:"";
-        background: url('nav-icon.png') no-repeat;
-        width: 30px;
-        height: 30px;
-        display: inline-block;
-        position: absolute;
-        right: 15px;
-        top: 10px;
-    }
-}
+  .show-nav #menu-nav, #menu-nav {
+    display: none;
+  }
+  .show-nav #navigation-bar-mobile {
+      display: block;
+      border-bottom: 0;
+  }
+  #navigation-bar-mobile ul {
+      height: auto;
+  }
+  #navigation-bar-mobile a#pull {
+      display: block;
+      background-color: #283744;
+      width: 100%;
+      position: relative;
+  }
+  #navigation-bar-mobile a#pull:after {
+      content:"";
+      background: url('nav-icon.png') no-repeat;
+      width: 30px;
+      height: 30px;
+      display: inline-block;
+      position: absolute;
+      right: 15px;
+      top: 10px;
+  }
 
-@media only screen and (max-width : 320px) {
-    .navigation-bar li {
-        display: block;
-        float: none;
-        width: 100%;
-    }
-    .navigation-bar li a {
-        border-bottom: 1px solid #576979;
-    }
+  #navigation-bar-mobile li {
+      display: block;
+      float: none;
+      width: 100%;
+  }
+  #navigation-bar-mobile li a {
+      border-bottom: 1px solid #576979;
+  }
 }
