--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,8 @@
   <body>
     <!--NAV BAR-->
 <div class="header">
-    <div id='navigation-bar'>
+  <a href="#" id="pull">Menu</a>
+    <div id='navigation-bar-mobile'>
     <ul class=>
         <li><a href="/">Home</a>
         <a href="/discover">Discover</a>
@@ -22,11 +23,7 @@
         <a href="/myPlaylists">Playlists</a>
         <a href="/logout">Logout</a></li>
     </ul>
-    <a href="#" id="pull">Menu</a>
     </div>
-</div>
-
-    <div class="header">
     <div id='menu-nav'>
       <div id='navigation-bar'>
         <ul>
@@ -35,7 +32,7 @@
           <li class='menu-sub-nav'><a href='/myAccount'><i class='fa fa-user'></i><span>Me</span></a></li>
           <li class='menu-sub-nav'><a href='/friends'><i class='fa fa-users'></i><span>Friends</span></a></li>
           <li class='menu-sub-nav' id='searchbox'><a href='/myPlaylists'><i class='fa fa-book'></i><span>Playlists</span></a></li>
-          <li class='menu-sub-nav'><a href='/logout'><i class='fa'></i><span>Logout</span></a></li>
+          <li class='menu-sub-nav'><a href='/logout'><i class='fa fa-cog'></i><span>Logout</span></a></li>
         </ul>
       </div>
       <!-- <div id='search-bar'>
