--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,6 +35,21 @@ body {
   text-align: center;
 }
 
+.login{
+  font: 25px 'Roboto Slab', serif;
+  margin: 0px;
+  color: #55acee;
+  text-align: center;
+}
+
+.form-control{
+  width: 80%;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%,0%);
+}
+
 .shittyLogo {
   position: absolute;
   top: 25%;
@@ -46,6 +61,8 @@ body {
   top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
+  background: #3c405c;
+  height: 40vh;
 }
 .heading{
   font: 20px 'Open Sans', sans-serif;
@@ -60,6 +77,7 @@ body {
   margin: 40px auto;
   background: #3c405c;
   padding: 20px;
+  height: auto;
   border: 5px solid #343850;
   .box-shadow(0 0 24px rgba(0,0,0,0.12));
 
@@ -82,6 +100,229 @@ body {
 
 .header{
   display: flex;
+}
+
+#homeButtons {
+  display: block;
+}
+
+.button-cool {
+  outline:none;
+  height: 40px;
+  text-align: center;
+  width: 140px;
+  border-radius:40px;
+  background: #3c405c;
+  border: 1px solid #1ECD97;
+  color:#1ECD97;
+  letter-spacing:1px;
+  padding: 8px;
+  margin: 10px;
+  font-size:12px;
+  font-weight:bold;
+  cursor: pointer;
+  transition: all 0.25s ease;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%,0%);
+  &:hover {
+    color:white;
+    background: #1ECD97;
+  }
+  &:active {
+    letter-spacing: 2px ;
+  }
+  &:after {
+    content:"SUBMIT";
+  }
+}
+.onclic {
+  width: 40px;
+  border-color:#bbbbb;
+  border-width:3px;
+  font-size:0;
+  border-left-color:#1ECD97;
+  animation: rotating 2s 0.25s linear infinite;
+
+  &:after {
+    content:"";
+  }
+  &:hover {
+    color: white;
+    background: #1ECD97;
+  }
+}
+.button-cool:hover{
+  color:white;
+  background: #1ECD97;
+}
+.button-uncool {
+  outline:none;
+  height: 40px;
+  text-align: center;
+  width: 140px;
+  border-radius:40px;
+  background: #3c405c;
+  border: 1px solid white;
+  color:white;
+  letter-spacing:1px;
+  padding: 8px;
+  margin: 2px;
+  font-size:12px;
+  font-weight:bold;
+  cursor: pointer;
+  transition: all 0.25s ease;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%,0%);
+  justify-content: center;
+  &:hover {
+    color:#3c405c;
+    background: white;
+  }
+  &:active {
+    letter-spacing: 2px ;
+  }
+  &:after {
+    content:"SUBMIT";
+  }
+}
+.onclic {
+  width: 40px;
+  border-color:#bbbbb;
+  border-width:3px;
+  font-size:0;
+  border-left-color:#1ECD97;
+  animation: rotating 2s 0.25s linear infinite;
+
+  &:after {
+    content:"";
+  }
+  &:hover {
+    color:#3c405c;
+    background: white;
+  }
+}
+.button-uncool:hover{
+  color:#3c405c;
+  background: white;
+}
+a:hover{
+  color: white;
+  text-decoration: none;
+}
+
+.button-register {
+  outline:none;
+  height: 40px;
+  text-align: center;
+  width: 140px;
+  border-radius:40px;
+  background: #3c405c;
+  border: 1px solid white;
+  color:white;
+  letter-spacing:1px;
+  margin: 2px;
+  font-size:12px;
+  font-weight:bold;
+  cursor: pointer;
+  transition: all 0.25s ease;
+  justify-content: center;
+  &:hover {
+    color:#3c405c;
+    background: white;
+  }
+  &:active {
+    letter-spacing: 2px ;
+  }
+  &:after {
+    content:"SUBMIT";
+  }
+}
+.onclic {
+  width: 40px;
+  border-color:#bbbbb;
+  border-width:3px;
+  font-size:0;
+  border-left-color:#1ECD97;
+  animation: rotating 2s 0.25s linear infinite;
+
+  &:after {
+    content:"";
+  }
+  &:hover {
+    color:#3c405c;
+    background: white;
+  }
+}
+.button-register:hover{
+  color:#3c405c;
+  background: white;
+}
+a:hover{
+  color: white;
+  text-decoration: none;
+}
+
+.twoButtons {
+  display: flex;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
+
+.button-facebook {
+  outline:none;
+  height: 40px;
+  text-align: center;
+  width: 140px;
+  border-radius:40px;
+  background: #3c405c;
+  border: 1px solid #8b9dc3;
+  color:white;
+  letter-spacing:1px;
+  margin: 2px;
+  font-size:12px;
+  font-weight:bold;
+  cursor: pointer;
+  transition: all 0.25s ease;
+  justify-content: center;
+  &:hover {
+    color:##8b9dc3;
+    background: white;
+  }
+  &:active {
+    letter-spacing: 2px ;
+  }
+  &:after {
+    content:"SUBMIT";
+  }
+}
+.onclic {
+  width: 40px;
+  border-color:#bbbbb;
+  border-width:3px;
+  font-size:0;
+  border-left-color:#8b9dc3;
+  animation: rotating 2s 0.25s linear infinite;
+
+  &:after {
+    content:"";
+  }
+  &:hover {
+    color:#8b9dc3;
+    background: white;
+  }
+}
+.button-facebook:hover{
+  color:#3c405c;
+  background: #8b9dc3;
+}
+a:hover{
+  color: white;
+  text-decoration: none;
 }
 
 #menu-nav {
@@ -158,7 +399,7 @@ margin: 0 auto; /*make the menu center-aligned*/}
   border-radius:4px;
   text-align: center;
 }
-form {width:90%;}
+
 input.searchfld {
   width:100%;
   padding:10px 5%;
@@ -181,14 +422,9 @@ input.searchfld {
   height: 120px;
 }
 
-.stacked {
-  .form-group {
-    width: 100%;
-    display: block;
-    margin-bottom: 6px;
-    label { width: @label-width; margin: 0; }
-    input { width: 100 - @label-width; margin: 0; }
-  }
+.form-group{
+  margin: 20px 20px 40px;
+  justify-content: center;
 }
 
 #navigation-bar-mobile{
