--- a/views/login.hbs
+++ b/views/login.hbs
@@ -22,8 +22,8 @@
         <div class="form-group" id="homeButtons">
           <button class="button-cool">Login</button>
           <div class="twoButtons">
-            <button class="button-register" href="/register">Register</a>
-            <button class="button-facebook" href="/login/facebook">Login with Facebook</a>
+            <a class="button-register" href="/register">Register</an>
+            <a class="button-facebook" href="/login/facebook">Login with Facebook</a>
           </div>
         </div>
       </form>
