--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
             <h4 class="card-title">Your Artist</h4>
             <div class='search-bar'>
               <form action='nothing'>
-                <input type='text' name='search' class='searchfld' placeholder="Pick your artist." autofocus/>
+                <input type='text' name='search' class='searchfld' id='searchfld1' placeholder="Pick your artist." autofocus/>
               </form>
               <div class='artist-list'>
                 <form action='nothing'>
@@ -28,7 +28,7 @@
             <h4 class="card-title">Their Artist</h4>
             <div class='search-bar'>
               <form action='nothing'>
-                <input type='text' name='search' class='searchfld' placeholder="Pick your artist." autofocus/>
+                <input type='text' name='search' class='searchfld' id='searchfld2' placeholder="Pick your artist." autofocus/>
               </form>
               <div class='artist-list'>
                 <form action='nothing'>
@@ -43,4 +43,6 @@
       </div>
     </div>
   </div>
+  <button class="btn btn-default" id="findMatches">Search</button>
+</div>
 </div>
