--- a/views/login.hbs
+++ b/views/login.hbs
@@ -22,7 +22,7 @@
         <div class="form-group" id="homeButtons">
           <button class="button-cool">Login</button>
           <div class="twoButtons">
-            <a class="button-register" href="/register">Register</an>
+            <a class="button-register" href="/register">Register</a>
             <a class="button-facebook" href="/login/facebook">Login with Facebook</a>
           </div>
         </div>
