--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -117,8 +117,8 @@ body {
   color:#1ECD97;
   letter-spacing:1px;
   padding: 8px;
-  margin: 10px;
-  font-size:12px;
+  margin: 2px;
+  font-size:13px;
   font-weight:bold;
   cursor: pointer;
   transition: all 0.25s ease;
@@ -169,7 +169,7 @@ body {
   letter-spacing:1px;
   padding: 8px;
   margin: 2px;
-  font-size:12px;
+  font-size:15px;
   font-weight:bold;
   cursor: pointer;
   transition: all 0.25s ease;
@@ -213,7 +213,7 @@ a:hover{
   text-decoration: none;
 }
 
-.button-register {
+.button-register, .button-search {
   outline:none;
   height: 40px;
   text-align: center;
@@ -224,7 +224,7 @@ a:hover{
   color:white;
   letter-spacing:1px;
   margin: 2px;
-  font-size:12px;
+  font-size:15px;
   font-weight:bold;
   cursor: pointer;
   transition: all 0.25s ease;
@@ -257,10 +257,18 @@ a:hover{
     background: white;
   }
 }
-.button-register:hover{
+.button-register:hover, .button-search:hover{
   color:#3c405c;
   background: white;
 }
+
+.button-search{
+  top: 60%;
+  left: 50%;
+  transform: translate(150%,0%);
+}
+
+
 a:hover{
   color: white;
   text-decoration: none;
@@ -426,6 +434,10 @@ input.searchfld {
 .form-group{
   margin: 20px 20px 40px;
   justify-content: center;
+}
+
+.card-title{
+  text-align: center;
 }
 
 #navigation-bar-mobile{
