--- a/views/index.hbs
+++ b/views/index.hbs
@@ -43,6 +43,6 @@
       </div>
     </div>
   </div>
-  <button class="btn btn-default" id="findMatches">Search</button>
+  <button class="button-search" id="findMatches">Search</button>
 </div>
 </div>
