--- a/views/register.hbs
+++ b/views/register.hbs
@@ -5,21 +5,28 @@
   {{error}}
 </div>
 {{/if}}
-<form method="POST" class="form-horizontal" style="margin-top: 50px; border: 0.5px solid gray; padding: 30px 30px 30px 30px">
-<h3>Register</h3>
-  <div class="form-group">
-      <input type="text" name="username" class="form-control" placeholder="Username">
+
+<div class="container" id="bodyContainer">
+  <div class="container-fluid">
+    <div class="row">
+      <form method="POST" class="form-horizontal">
+      <div class="login">Register</div>
+        <div class="form-group">
+            <input type="text" name="username" class="form-control" placeholder="Username">
+        </div>
+        <div class="form-group">
+            <input type="text" name="email" class="form-control" placeholder="Email">
+        </div>
+        <div class="form-group">
+          <input type="password" name="password" class="form-control" placeholder="Password">
+        </div>
+        <div class="form-group">
+          <input type="password" name="passwordConfirm" class="form-control" placeholder="Confirm Password">
+        </div>
+        <div class="form-group">
+          <button class="button-search">Register</button>
+        </div>
+      </form>
+    </div>
   </div>
-  <div class="form-group">
-      <input type="text" name="email" class="form-control" placeholder="Email">
-  </div>
-  <div class="form-group">
-    <input type="password" name="password" class="form-control" placeholder="Password">
-  </div>
-  <div class="form-group">
-    <input type="password" name="passwordConfirm" class="form-control" placeholder="Confirm Password">
-  </div>
-  <div class="form-group">
-    <button class="btn btn-success">Register</button>
-  </div>
-</form>
+</div>
