--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,11 +12,11 @@
                 <input type='text' name='search' class='searchfld' id='searchfld1' placeholder="Pick your artist." autofocus/>
               </form>
               <div class='artist-list'>
-                <form action='nothing'>
+                <!-- <form action='nothing'>
                   <li>Artist 1</li>
                   <li>Artist 2</li>
                   <li>Artist 3</li>
-                </form>
+                </form> -->
               </div>
             </div>
           </div>
@@ -31,11 +31,11 @@
                 <input type='text' name='search' class='searchfld' id='searchfld2' placeholder="Pick your artist." autofocus/>
               </form>
               <div class='artist-list'>
-                <form action='nothing'>
+                <!-- <form action='nothing'>
                   <li>Artist 1</li>
                   <li>Artist 2</li>
                   <li>Artist 3</li>
-                </form>
+                </form> -->
               </div>
             </div>
           </div>
