--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,9 +13,9 @@
               </form>
               <div class='artist-list'>
                 <form action='nothing'>
-                  <li>Artist 1</li>
+               <!--    <li>Artist 1</li>
                   <li>Artist 2</li>
-                  <li>Artist 3</li>
+                  <li>Artist 3</li> -->
                 </form>
               </div>
             </div>
@@ -32,9 +32,9 @@
               </form>
               <div class='artist-list'>
                 <form action='nothing'>
-                  <li>Artist 1</li>
+                  <!-- <li>Artist 1</li>
                   <li>Artist 2</li>
-                  <li>Artist 3</li>
+                  <li>Artist 3</li> -->
                 </form>
               </div>
             </div>
