--- a/views/index.hbs
+++ b/views/index.hbs
@@ -48,14 +48,10 @@
       </div>
     </div>
   </div>
-<<<<<<< HEAD
 </div>
   <div class="form-group">
-  <button class="button-cool">Search</button>
+  <button class="button-cool-search">Search</button>
 </div>
 </form>
-=======
-  <button class="button-search" id="findMatches">Search</button>
->>>>>>> 80e3d25e511e798efaef9e0ee6104f03d25a0115
 </div>
 </div>
