--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,16 +3,14 @@
   <head>
     <title>Road Trip</title>
     <link rel="icon" href="">
-       <script type="text/javascript" src="lastfm.api.md5.js"></script>
+    <!-- <script type="text/javascript" src="lastfm.api.md5.js"></script>
     <script type="text/javascript" src="lastfm.api.js"></script>
     <script type="text/javascript" src="lastfm.api.cache.js"></script>
-    <script type="text/javascript" src="json2.js"></script>
+    <script type="text/javascript" src="json2.js"></script> -->
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
    <link rel='stylesheet' href='/stylesheets/style.css' />
    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
   	<script src="/js/jquery.js"></script>
     <script src="/js/main.js"></script>
     <link rel="stylesheet" href="/stylesheets/animate.min.css">
