--- a/views/discover.hbs
+++ b/views/discover.hbs
@@ -17,7 +17,7 @@
       <td>Album</td>
     </tr></thead>
     <tbody>
-      {{#each songs}}
+      {{#each tracks}}
         <tr>
           <td>{{name}}</td>
           <td>{{artist}}</td>
@@ -28,20 +28,3 @@
   </table>
   <!-- <a type="button-cool-search" href="/export/{{spotifyId}}">Add to Playlist</a> -->
 </div>
-
-<tracks page="1" perPage="50" totalPages="20" total="1000">
-  <track>
-    <name>Dark Fantasy</name>
-    <playcount>124394</playcount>
-    <listeners>42141</listeners>
-    <mbid/>
-    <url>http://www.last.fm/music/Kanye+West/_/Dark+Fantasy</url>
-    <streamable fulltrack="0">0</streamable>
-    <artist>
-      <name>Kanye West</name>
-      <mbid>164f0d73-1234-4e2c-8743-d77bf2191051</mbid>
-      <url>http://www.last.fm/music/Kanye+West</url>
-    </artist>
-  </track>
-  ...
-</tracks>
