--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,6 +42,13 @@ body {
   text-align: center;
 }
 
+.top20{
+  font: 40px 'Roboto Slab', serif;
+  margin: 20px;
+  color: #AF4A36;
+  text-align: center;
+}
+
 .form-control{
   width: 80%;
   text-align: center;
@@ -503,17 +510,20 @@ html {
 }
 
 .user-badge {
+  top: 203px;
+  left: 150px;
+  display: inline-block;
+  position: relative;
   background-color: #394165;
   border-radius: 8px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  /* position: absolute; */
   text-align: center;
   width: 300px;
   height: 406px;
   opacity: 0.01;
-  transform: translate(-50%, -50%) translateZ(0px) scaleY(0.2) scaleX(0.4) skew(20deg, 10deg);
+  /* transform: translate(-50%, -50%) translateZ(0px) scaleY(0.2) scaleX(0.4) skew(20deg, 10deg); */
   overflow: hidden;
+  vertical-align: baseline;
   animation: start 500ms 500ms ease-out forwards;
 }
 
@@ -538,7 +548,7 @@ html {
   background-size: 20px;
   border: 6px solid #50597b;
   border-radius: 100%;
-  position: relative;
+  /*position: relative;*/
   margin: 43px auto 28px auto;
   width: 160px;
   height: 160px;
@@ -585,7 +595,7 @@ html {
 }
 
 .user-badge-nav {
-  position: absolute;
+  /*position: absolute;*/
   bottom: 0;
   line-height: 55px;
   width: 100%;
@@ -670,4 +680,14 @@ html {
 }
 .icon-mas:before {
 	content: "\e603";
+}
+
+.container-track{
+  position: relative;
+  top: 16em;
+  text-align: center;
+  width: 75%;
+  vertical-align: bottom;
+  margin: 0 auto;
+  /* line-height: 406px;
 }
