--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
   <div class="heading">Create the perfect playlist for a roadtrip with friends.</div>
   <div class="container-fluid">
     <div class="row">
-      <form action="search">
+      <form method='POST'>
 
         <div class='form-group'>
       <div class="col-xs-6">
@@ -15,11 +15,11 @@
                 <input type='text' name='artist1' class='searchfld' id='searchfld1' placeholder="Pick your artist." autofocus/>
 
               <div class='artist-list'>
-                <form action='nothing'>
-               <!--    <li>Artist 1</li>
+                <!-- <form action='nothing'>
+                  <li>Artist 1</li>
                   <li>Artist 2</li>
-                  <li>Artist 3</li> -->
-                </form>
+                  <li>Artist 3</li>
+                </form> -->
                 <!-- <form action='nothing'>
                   <li>Artist 1</li>
                   <li>Artist 2</li>
@@ -41,11 +41,11 @@
 
                 <input type='text' name='artist2' class='searchfld' id='searchfld2' placeholder="Pick your artist." autofocus/>
               <div class='artist-list'>
-                <form action='nothing'>
-                  <!-- <li>Artist 1</li>
+                <!-- <form action='nothing'>
+                  <li>Artist 1</li>
                   <li>Artist 2</li>
-                  <li>Artist 3</li> -->
-                </form>
+                  <li>Artist 3</li>
+                </form> -->
                 <!-- <form action='nothing'>
                   <li>Artist 1</li>
                   <li>Artist 2</li>
