fixed homepage and merge errors

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,11 +3,7 @@
   <div class="heading">Create the perfect playlist for a roadtrip with friends.</div>
   <div class="container-fluid">
     <div class="row">
-<<<<<<< HEAD
       <form method='POST'>
-
-=======
->>>>>>> 71391b0219c5f4626855773f44fa3e5f77066d41
         <div class='form-group'>
       <div class="col-xs-6">
         <div class="card">
@@ -15,25 +11,7 @@
             <h4 class="card-title">Your Artist</h4>
             <div class='search-bar'>
               <div action='nothing'>
-              <form method="post" action='/'>
                 <input type='text' name='artist1' class='searchfld' id='searchfld1' placeholder="Pick your artist." autofocus/>
-             <!--  </div> -->
-              <div class='artist-list'>
-<<<<<<< HEAD
-                <!-- <form action='nothing'>
-=======
-             <!--    <form action='nothing'>
->>>>>>> 71391b0219c5f4626855773f44fa3e5f77066d41
-                  <li>Artist 1</li>
-                  <li>Artist 2</li>
-                  <li>Artist 3</li>
-                </form> -->
-                <!-- <form action='nothing'>
-                  <li>Artist 1</li>
-                  <li>Artist 2</li>
-                  <li>Artist 3</li>
-                </form> -->
-              </div>
             </div>
           </div>
         </div>
@@ -48,22 +26,11 @@
              <!--  <form action='nothing'> -->
                 <input type='text' name='artist2' class='searchfld' id='searchfld2' placeholder="Pick your artist." autofocus/>
              <!--  </form> -->
-              <div class='artist-list'>
-<<<<<<< HEAD
-                <!-- <form action='nothing'>
-=======
-              <!--   <form action='nothing'>
->>>>>>> 71391b0219c5f4626855773f44fa3e5f77066d41
-                  <li>Artist 1</li>
-                  <li>Artist 2</li>
-                  <li>Artist 3</li>
-                </form> -->
                 <!-- <form action='nothing'>
                   <li>Artist 1</li>
                   <li>Artist 2</li>
                   <li>Artist 3</li>
                 </form> -->
-              </div>
             </div>
           </div>
         </div>
@@ -71,7 +38,7 @@
     </div>
   </div>
   <!-- <form method="post" action='/'> -->
-  <button class="btn btn-default" id="findMatches">Search</button>
+  <button class="button-search" id="findMatches">Search</button>
   </form>
 </div>
 </div>
