--- a/views/myAccount.hbs
+++ b/views/myAccount.hbs
@@ -1,4 +1,4 @@
-<div class="user-badge">
+<div class="user-badge-pro">
   <div class="user-badge-avatar">
     <img src="https://graph.facebook.com/{{user.facebookId}}/picture?type=large" alt="https://lh5.googleusercontent.com/-9Uj_3ke-LrE/UbHnPLr35mI/AAAAAAAAiTE/5HzEz3G-ojs/s400/Hamilton-Mustache-Cat-13.jpg"/>
   </div>
@@ -7,7 +7,6 @@
     <ul>
       <li>{{user.email}}</li>
       <li>{{user.friends}}</li>
-      <li>{{user.spotifyId}}</li>
     </ul>
   </div>
 </div>
