--- a/views/playlists.hbs
+++ b/views/playlists.hbs
@@ -1,14 +1,8 @@
-<div class="user-badge">
+<div class="user-badge-pro">
   <div class="user-badge-avatar">
     <i class='fa fa-music' style="font-size: 100px; padding: 20px"></i>
   </div>
   <div class="login">My Playlists</div>
-  <table>
-    <thead><tr>
-      <td>Name</td>
-      <td>Creator</td>
-      <td>Date Created</td>
-    </tr></thead>
     <tbody>
       {{#each playlists}}
         <tr>
