--- a/views/discover.hbs
+++ b/views/discover.hbs
@@ -7,11 +7,11 @@
   <div class="user-badge-avatar">
     <img src="{{picture}}"/>
   </div>
-  <div class="login">{{playlist.name}}</div>
+  <!-- <div class="login">{{playlist.name}}</div> -->
   <div class="heading">
     <ul>
       <li>{{name}}</li>
-      <li>{{artist}}</li>
+      <li><strong>{{artist}}</strong></li>
     </ul>
   </div>
   </table>
