--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
   <div class="heading">Create the perfect playlist for a roadtrip with friends.</div>
   <div class="container-fluid">
     <div class="row">
-      <form method='POST'>
+      <form method='POST' action="/">
         <div class='form-group'>
       <div class="col-xs-6">
         <div class="card">
